Resources/assets/less/branch-navbar.less
header {
  margin-top: @line-height-computed;
}

#header-logo {
  .make-md-column(3);
  text-align: center;
}

#header-nav {
  padding: 0;
  float: right;
  margin-right: 15px;
  list-style-type: none;
}

#header-branch-name,
#header-branch-occurrence,
#header-cart {
  padding: 5px 15px;

  h1,
  > strong {
    margin: 0;
    font-size: @font-size-large;
    font-weight: bold;
    line-height: @line-height-base;

    @media (min-width: @screen-sm-min) {
      display: block;
    }

    &.loading,
    &.loading a {
      color: @gray-light;
    }
  }
}

#header-branch-name {
  clear: both;
}

@media screen and (min-width: @screen-sm-min) {
  #header-branch-occurrence {
    border-right: 1px solid @panel-default-border;
    border-left: 1px solid @panel-default-border;
  }
}

#header-branch-change-link {
  display: block;
  font-size: @font-size-small;
}

#header-branch-occurrence-order-from {
  margin-bottom: @line-height-computed;
  font-size: @font-size-large;
  color: @brand-danger;
  font-weight: bold;
}

#header-branch-occurrence-order-before {
  color: @brand-danger;
  font-size: @font-size-small;
}

.page-branch {
  .navbar {
    border: 0;
    margin: 0;

    @media (max-width: @screen-xs-max) {
      margin-top: 0;
    }

    .container {
      position: relative;
    }

    .row {
      @media (max-width: @screen-xs-max) {
        display: flex;
        flex-wrap: wrap;
        padding-top: @over-header-height;
        background: @header-bg;
      }
    }
  }

  #header-logo,
  #header-branch-name {
    @media (max-width: @screen-xs-max) {
      line-height: 30px;
    }
  }

  #header-logo {
    @media (max-width: @screen-sm-max) and (min-width: @screen-sm-min) {
      float: left;
    }

    @media (max-width: @screen-xs-max) {
      position: absolute !important;
      text-align: left !important;
      height: @over-header-height;
      top: 0;
      left: 0;
      right: 40%;
      order: 1;
      z-index: 1;
      background: @over-header-bg;
      padding: 0 0 0 15px;

      strong {
        font-size: 12px;
      }
    }
  }

  #header-branch-name {
    @media (max-width: @screen-xs-max) {
      background: @over-header-bg;
      height: @over-header-height;
      line-height: @over-header-height;
      position: absolute;
      text-align: right;
      top: 0;
      right: 0;
      left: 60%;
      order: 2;
      z-index: 1;
      padding: 0 15px 0 0;
    }

    .branch-title {
      @media (max-width: @screen-xs-max) {
        margin: 0;
        font-size: 12px;
        position: absolute;
        white-space: nowrap;
        text-align: right;
        top: 0;
        right: 30px;
        left: 0;
        line-height: @over-header-height;
      }

      .ellipsis {
        @media (max-width: @screen-xs-max) {
          overflow: hidden;
          white-space: nowrap;
          text-overflow: ellipsis;
          position: absolute;
          top: 0;
          left: 0;
          right: 22px;
        }
      }

      .leftover {
        @media (max-width: @screen-xs-max) {
          width: 22px;
        }
      }
    }

    .header-branch-change-link {
      @media (max-width: @screen-xs-max) {
        display: inline;
      }
    }
  }
}

.navbar-toggle {
  border-radius: @navbar-button-border-radius;
  background-color: @navbar-button-bg;
  border: @navbar-button-border;
  height: @navbar-button-height;
  width: @navbar-button-width;
  color: @navbar-button-color;

  margin: 5px 5px 5px 15px;
  padding: 8px 8px;

  .icon-bar {
    height: 3px;
    width: 24px;
    background-color: @navbar-button-color;
  }

  @media (max-width: @screen-xs-max) {
    order: 3;
  }

  @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
    display: block;
    position: absolute;
    left: 0;
    top: 50%;
    margin-top: -(@navbar-button-height / 2);
  }
}

#header-nav {
  position: relative;

  @media (max-width: @screen-xs-max) {
    flex: 1;
    order: 4;
    padding: 0;
    margin: 5px 0;

    .account {
      border-radius: @navbar-button-border-radius;
      background-color: @navbar-button-bg;
      height: @navbar-button-height;
      width: @navbar-button-width;
      color: @navbar-button-color;
      border: @navbar-button-border;

      display: block;
      float: right;
      text-align: center;
      padding: 8px;
      font-size: 20px;
      cursor: pointer;
    }
  }
}

#header-cart {
  @media (max-width: @screen-xs-max) {
    padding: 0 !important;
    margin: 5px 15px 5px 5px;
    order: 5;
  }
}

#header-branch-occurrence {
  @media (max-width: @screen-xs-max) {
    .make-xs-column(12);
    background-color: @sub-header-bg;
    height: @sub-header-height;
    order: 6;
  }

  &.closed {
    @media (max-width: @screen-xs-max) {
      background-color: @sub-header-closed-bg;

      &,
      a {
        color: @sub-header-closed-color;
      }
    }
  }
}

//
// Cart
//

.btn-cart {
  position: relative;
  display: inline-block;
  text-align: left;
  border: 0;

  @media (max-width: @screen-xs-max) {
    border-radius: @navbar-button-border-radius;
    background-color: @navbar-button-bg;
    border: @navbar-button-border;
    height: @navbar-button-height;
    width: @navbar-button-width;
    text-align: center;
    padding: 4px 5px;
    display: block;
  }

  &:hover,
  &:focus {
    text-decoration: none;
  }

  > .glyphicon-shopping-cart {
    font-size: 35px;
    margin-right: 10px;
    float: left;

    @media (max-width: @screen-xs-max) {
      font-size: 28px;
      margin-right: 0;
      float: none;
    }
  }

  .cart-title {
    @media (min-width: @screen-sm-min) {
      font-size: 18px;
      font-weight: bold;
      color: #000;
    }
  }

  .cart-items-number {
    position: absolute;
    font-weight: bold;
    font-size: 11px;
    color: #FFF;
    left: 12px;
    top: 7px;

    @media (max-width: @screen-xs-max) {
      color: @navbar-cart-inumber-color;
      left: 15px;
      top: 8px;
    }
  }

  .small-price {
    line-height: 35px;

    @media (max-width: @screen-xs-max) {
      float: right;
      line-height: 30px;
      margin-left: 5px;
    }
  }

  &.has-item {
    @media (max-width: @screen-xs-max) {
      color: #FFF;
      background-color: @navbar-cart-bg-witem;
    }

    .cart-items-number {
      @media (max-width: @screen-xs-max) {
        color: @navbar-cart-inumber-color-witem;
      }
    }
  }
}

